# CustomerReviewClassifier

./: .env.docker  .env.docker.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  backend.py  database.py  main.py  pyproject.toml
frontend/: Dockerfile  app.py  pyproject.toml
ml/: pyproject.toml
ml/artifacts/: LabelEncoder.pkl  TfidfVectorizer.pkl  label_classes.pkl  x.pkl  y.pkl
ml/data/: Data_Preprocessing.ipynb
ml/models/fine_tuning_bert/: fine_tune_bert.ipynb  fine_tune_bert.ipynb:Zone.Identifier
ml/models/fine_tuning_bert/BERT_LORA/: adapter_model.safetensors
ml/models/sgd_model/: SGD.ipynb  SGD.pkl
