[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.7",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "joblib>=1.5.2",
    "peft>=0.17.1",
    "pydantic>=2.11.7",
    "pymysql>=1.1.2",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.43",
    "torch>=2.8.0",
    "transformers>=4.56.1",
    "uvicorn>=0.35.0",
]
