[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "dotenv>=0.9.9",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "peft>=0.17.1",
    "pip>=25.2",
    "scikit-learn>=1.7.2",
    "spacy>=3.8.7",
    "torch>=2.8.0",
    "transformers>=4.56.1",
]
